k8s/chapter8/ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: pjw.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/echo-hostname"
        backend:
          service:
            name: hostname-service
            port: 
              number: 8080
