k8s/chapter8/ingress-rewrite-target.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # path의 (.*) 에서 획득한 경로로 전달
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: pjw.example.com
    http:
      paths:
      - path: /echo-hostname(/|$)(.*)          # (.*) 을 통해 경로를 얻는다
        pathType: Prefix
        backend: 
          service: 
            name: hostname-service
            port: 
              number: 80
