k8s/chapter8/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tls
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - pjw.example.com
      secretName: tls-secret
  rules:
  - host: pjw.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/echo-hostname"
        backend:
          service:
            name: hostname-service
            port: 
              number: 8080
